--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ main {
 .paramDesc {
     font-family: 'Rubik', sans-serif;
     font-size: 20px;
+    line-height: 30px;
 }
 
 @media screen and (max-width: 800px) {
