--- a/style.css
+++ b/style.css
@@ -100,6 +100,13 @@ main {
     line-height: 30px;
 }
 
+.link{
+    position: relative;
+    bottom: 10px;
+    right: -30px;
+    /* left: 30px; */
+}
+
 @media screen and (max-width: 800px) {
     main {
         width: 95%;
